src/objects/PRM_Config__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Description__c</fullName>
        <label>Brand Description</label>
        <length>2047</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center_Number__c</fullName>
        <label>Call Center Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Check_in_call_timing__c</fullName>
        <label>Check In Call Timing</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_graph__c</fullName>
        <label>Closing graph</label>
        <length>511</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Medical_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Medical Profile</label>
        <referenceTo>PRM_Medical_Profile_Link__c</referenceTo>
        <relationshipLabel>PRM Config</relationshipLabel>
        <relationshipName>PRM_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Portal_Welcome_Msg__c</fullName>
        <label>Doctor Portal Welcome Msg</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Template_Banner_Image__c</fullName>
        <label>Email Template Banner Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_Name__c</fullName>
        <label>Facilitator Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Image__c</fullName>
        <label>Footer Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Nav__c</fullName>
        <label>Footer Nav</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_Statement__c</fullName>
        <label>Mission Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCC_Team_Sig_Card__c</fullName>
        <description>Signature card used for emails originating from the PCC team.</description>
        <inlineHelpText>Signature card used for emails originating from the PCC team.</inlineHelpText>
        <label>PCC Team Sig Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCC_designation__c</fullName>
        <label>PCC designation</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Welcome_Msg__c</fullName>
        <label>Partner Portal Welcome Msg</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Patient_Portal_Banner_Image__c</fullName>
        <label>Patient Portal Banner Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Portal_CSS__c</fullName>
        <label>Patient Portal CSS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Portal_Welcome_Message__c</fullName>
        <label>Patient Portal Welcome Message</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Provider_Network_Desc__c</fullName>
        <label>Provider Network Desc</label>
        <length>2047</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Portal_Banner_Image__c</fullName>
        <label>Provider Portal Banner Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <description>Enter the name of an existing Public Group. Public Groups are defined under Setup, Administration Setup, Manage Users, Public Groups. This Public Group defines the Facilitator Orgs PCCs. There is a corresponding group for each Medical Facility.</description>
        <label>Public Group</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quote_Itinerary_Header__c</fullName>
        <label>Quote/Itinerary Header</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Offer__c</fullName>
        <label>Referral Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_time__c</fullName>
        <description>Guaranteed response time in hours.</description>
        <inlineHelpText>Guaranteed response time in hours.</inlineHelpText>
        <label>Guaranteed response time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Survey_Link__c</fullName>
        <label>Satisfaction Survey Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Banner_Image__c</fullName>
        <label>Survey Banner Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Widget__c</fullName>
        <label>Twitter Widget</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>contact_Link_URL__c</fullName>
        <label>Contact Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PRM Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>